--- a/wb-resolver/templates/kuberesolver-helm.yml
+++ b/wb-resolver/templates/kuberesolver-helm.yml
@@ -7,7 +7,7 @@ metadata:
   namespace: {{ .Values.namespace }}
 data:
   kres.conf: |-
-{{ (.Files.Get "kres.conf"(.AsConfig) | indent 4 }}
+{{ .Values.kresconf | indent 4 }}
    
    
   # -- get the name of the leading resolver process for later use
