--- a/wb-resolver/templates/kuberesolver-helm.yaml
+++ b/wb-resolver/templates/kuberesolver-helm.yaml
@@ -1,80 +1,3 @@
-
----
-kind: ConfigMap
-apiVersion: v1
-metadata:
-  name: kresconf
-  namespace: {{ .Values.namespace }}
-data:
-  kres.conf: |-
-{{ .Values.kresconf | indent 4 }}
-   
-   
-  # -- get the name of the leading resolver process for later use
-  # local kres_instance = os.getenv("SUPERVISOR_PROCESS_NAME")
-  # -- do not use ipv6 for outgoing recursive queries by default
-  # net.ipv6 = false
-  # -- load all the knot resolver modules needed
-  # modules = { 'workarounds < iterate', 'serve_stale < cache', 'hints > iterate', 'policy', 'stats', 'predict', 'bogus_log', 'http','whalebone' }
-  # -- size of the dns cache is calculated during startup as 1/4 of available ram
-  # cache.open(os.getenv('KNOT_CACHE_SIZE') * MB, 'lmdb:///var/lib/kres/cache')
-  # -- exceptions for some troublesome domains
-  # policy.add(policy.suffix(policy.FLAGS({'NO_0X20', 'NO_MINIMIZE'}), {todname('microsoftonline.com')}))
-  # policy.add(policy.suffix(policy.FLAGS({'NO_0X20', 'NO_MINIMIZE'}), {todname('windows.net')}))
-  # policy.add(policy.suffix(policy.FLAGS({'NO_0X20', 'NO_MINIMIZE'}), {todname('trafficmanager.net')}))
-  # -- signal firefox to disable DNS over HTTPS and use this resolver instead
-  # policy.add(policy.suffix(policy.DENY, {todname('use-application-dns.net.')}))
-  # -- prefill the cache with root zone content and update daily
-  # if string.match(kres_instance, 'resolver_00') then
-  #   modules.load('prefill')
-  #   prefill.config({  ['.'] = { url = 'https://www.internic.net/domain/root.zone',  interval = 86400 }  })
-  # end
-  # -- bind wed management interface on localhost for automation purposes
-  # --define Whalebone http management endpoints
-  # --endpoint: wb-trace
-  # local wbmgmt_trace = {'application/json',
-  # function (h, stream)
-  #         -- Get request method and deal with it properly
-  #         local m = h:get(':method')
-  #         local path = h:get(':path')
-  #         local r = string.sub(path, string.find(path, "/", 2) + 1)
-  #         log('[wbmgmt_query] method %s path %s, %s', m, path, r)
-  #         if m == 'GET' then
-  #                 local s = whalebone.query(r)
-  #                 return s
-  #         else
-  #                 return 405, 'Cannot do that'
-  #         end
-  # end}
-  # --endpoint: wb-reload-caches
-  # local wbmgmt_reload_caches = {'application/json',
-  # function (h, stream)
-  #         -- Get request method and deal with it properly
-  #         local m = h:get(':method')
-  #         local path = h:get(':path')
-  #         if (m == 'GET') then
-  #                 local s = whalebone.load_newest_lmdbs()
-  #                 return s
-  #         else
-  #                 return 405, 'Cannot do that'
-  #         end
-  # end}
-  # -- register the new endpoints on the web management interface
-  # my_mgmt_endpoints = http.configs._builtin.webmgmt.endpoints
-  # my_mgmt_endpoints['/wb-trace'] = wbmgmt_trace
-  # my_mgmt_endpoints['/wb-reload-caches'] = wbmgmt_reload_caches
-  # http.config({
-  #         tls = false,
-  #         endpoints = my_mgmt_endpoints
-  # }, 'webmgmt')
-  # -- bind web management interface on localhost for automation purposes
-  # pcall(net.listen, '127.0.0.1', 8453, { kind = 'webmgmt' })
-  # -- end of defaults, resolver specific configuration follows
-  # -- Default DNS bindings
-  # for name, iface in pairs(net.interfaces()) do pcall(net.listen, {iface['addr'], 53 }) end
-
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -131,15 +54,6 @@ spec:
           name: var-lib-kres-tty
         # - mountPath: "/etc/kres"
         #   name: etc-whalebone-kres
-        resources:
-          requests:
-            cpu: 40m
-            memory: 100Mi
-          limits:
-            cpu: 200m
-            memory: 1.1Gi
-        stdin: true
-        tty: true
         ports:
         - containerPort: 53
      # kresman     
@@ -195,15 +109,6 @@ spec:
           name: var-whalebone
         - mountPath: "/var/log/whalebone"
           name: var-log-whalebone
-        resources:
-          requests:
-            cpu: 40m
-            memory: 100Mi
-          limits:
-            cpu: 200m
-            memory: 1.1Gi
-        stdin: true
-        tty: true
      
        # logcat
       - name: logcat
@@ -218,15 +123,6 @@ spec:
         volumeMounts:
         - mountPath: "/var/log/whalebone"
           name: var-log-whalebone
-        resources:
-          requests:
-            cpu: 40m
-            memory: 150Mi
-          limits:
-            cpu: 200m
-            memory: 300Mi
-        stdin: true
-        tty: true
         ports:
         - containerPort: 4000
      # logcat-content   
@@ -242,15 +138,6 @@ spec:
         volumeMounts:
         - mountPath: "/var/log/whalebone"
           name: var-log-whalebone
-        resources:
-          requests:
-            cpu: 40m
-            memory: 150Mi
-          limits:
-            cpu: 200m
-            memory: 300Mi
-        stdin: true
-        tty: true
         ports:
         - containerPort: 4001
      # logstream   
@@ -268,15 +155,7 @@ spec:
         volumeMounts:
         - mountPath: "/var/log/whalebone"
           name: var-log-whalebone
-        resources:
-          requests:
-            cpu: 40m
-            memory: 150Mi
-          limits:
-            cpu: 200m
-            memory: 300Mi
-        stdin: true
-        tty: true
+
     # logrotate
       - name: logrotate
         env:
@@ -296,18 +175,9 @@ spec:
         volumeMounts:
         - mountPath: "/var/log/whalebone"
           name: var-log-whalebone
-        resources:
-          requests:
-            cpu: 40m
-            memory: 150Mi
-          limits:
-            cpu: 200m
-            memory: 300Mi
-        stdin: true
-        tty: true
-
-         # passivedns
-      - name: passivedns
+ 
+         # dnstag
+      - name: dnstag
         env:
         - name: DNS_INTERFACE
           value: any
@@ -315,19 +185,21 @@ spec:
           value: '256'
         - name: PASSIVEDNS_LOGFILE
           value: '/var/log/whalebone/passivedns.log'
-        image: {{ .Values.passivedns.image }}:{{ .Values.passivedns.tag }}
+        image: {{ .Values.dnstag.image }}:{{ .Values.dnstag.tag }}
         volumeMounts:
         - mountPath: "/var/log/whalebone"
           name: var-log-whalebone
-        resources:
-          requests:
-            cpu: 40m
-            memory: 150Mi
-          limits:
-            cpu: 200m
-            memory: 300Mi
-        stdin: true
-        tty: true
+        - mountPath: "/var/whalebone/dnstap"
+          name: var-whalebone-dnstap
+        - mountPath: "/var/whalebone"
+          name: var-whalebone
+        - mountPath: "/var/whalebone/dnstag/db"
+          name: var-whalebone-db
+        - mountPath: "/var/whalebone/lmdb"
+          name: var-whalebone-lmdb
+        command: ['/go/bin/cmd', '-b', '-u=/var/whalebone/dnstap/dnstap.sock', '-w', '/var/log/whalebone/passivedns.log']
+
+
  
       # consumer
       - name: consumer
@@ -343,15 +215,6 @@ spec:
         - name: LOGGING_LEVEL
           value: 'INFO'
         image: {{ .Values.consumer.image }}:{{ .Values.consumer.tag }}
-        resources:
-          requests:
-            cpu: 40m
-            memory: 150Mi
-          limits:
-            cpu: 200m
-            memory: 300Mi
-        stdin: true
-        tty: true
 
       # lr-agent
       - name: lr-agent
@@ -384,15 +247,7 @@ spec:
           name: var-lib-kres-tty
         - mountPath: "/etc/whalebone/etc"
           name: etc-whalebone
-        resources:
-          requests:
-            cpu: 40m
-            memory: 150Mi
-          limits:
-            cpu: 200m
-            memory: 300Mi
-        stdin: true
-        tty: true
+
       volumes:
       - name: cache
         emptyDir:
@@ -410,6 +265,12 @@ spec:
         emptyDir: {}
       - name: etc-whalebone
         emptyDir: {}
+      - name: var-whalebone-dnstap
+        emptyDir: {}
+      - name: var-whalebone-db
+        emptyDir: {}
+      - name: var-whalebone-lmdb
+
       # - name: etc-whalebone-kres
       #   emptyDir: {}
       # imagePullSecrets: 
@@ -463,5 +324,8 @@ spec:
       port: 53
       targetPort: 53
       protocol: UDP
+
+
+
 
 
