--- a/wb-resolver/values.yaml
+++ b/wb-resolver/values.yaml
@@ -1,10 +1,10 @@
 
-namespace: resolver
+namespace: wbresolver
 replicacount: 2
 
 resolver:
   image: "harbor.whalebone.io/resolver/kres"
-  tag: "5.3.2-4-17"
+  tag: "5.5.0-4-201"
 
 logstream:
   image: "harbor.whalebone.io/resolver/logstream"
@@ -12,7 +12,7 @@ logstream:
 
 kresman:
   image: "harbor.whalebone.io/resolver/kresman"
-  tag: "4.0.5"
+  tag: "4.2.4"
 
 logcat:
   image: "harbor.whalebone.io/resolver/logcat"
@@ -26,17 +26,17 @@ logrotate:
   image: "harbor.whalebone.io/resolver/logrotate"
   tag: "1.2"
 
-passivedns:
-  image: "harbor.whalebone.io/resolver/passivedns"
-  tag: "1.1.3"
+dnstag:
+  image: "harbor.whalebone.io/resolver/dnstag"
+  tag: "1.6.4"
 
 lr_agent:
   image: "harbor.whalebone.io/resolver/agent"
-  tag: "1.5.6"
+  tag: "1.5.9"
 
 consumer:
   image: "harbor.whalebone.io/resolver/consumer"
-  tag: "1.0.3"
+  tag: "1.0.5"
 
 
 # # Default values for test1.
