--- a/wb-resolver/values.yaml
+++ b/wb-resolver/values.yaml
@@ -4,15 +4,15 @@ replicacount: 2
 
 resolver:
   image: "harbor.whalebone.io/resolver/kres"
-  tag: "5.5.0-4-203"
+  tag: "5.6.0-661"
 
 logstream:
   image: "harbor.whalebone.io/resolver/logstream"
-  tag: "7.13.2-1"
+  tag: "7.13.2-4"
 
 kresman:
-  image: "harbor.whalebone.io/resolver/kresman"
-  tag: "4.2.5"
+  image: "harbor.whalebone.io/resolver/k2man"
+  tag: "1.3.24"
 
 logcat:
   image: "harbor.whalebone.io/resolver/logcat"
@@ -28,15 +28,21 @@ logrotate:
 
 dnstag:
   image: "harbor.whalebone.io/resolver/passivedns"
-  tag: "1.1.3"
+  tag: "1.7.14"
 
 lr_agent:
   image: "harbor.whalebone.io/resolver/agent"
-  tag: "1.5.9"
+  tag: "1.5.11"
 
 consumer:
-  image: "harbor.whalebone.io/resolver/consumer"
-  tag: "1.0.6"
+  image: "harbor.whalebone.io/resolver/k2tide"
+  tag: "0.5.0"
+
+blocking-page:
+  image: "harbor.whalebone.io/resolver/k2web"
+  tag: "1.2.12"
+
+
 
 
 # # Default values for test1.
